bugfix - static map width isnt the same as viewport #64 (caused by padding and/or missing scrollbar)

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -1,6 +1,7 @@
 html
 	height: 100%
 	position: relative
+	overflow-y: scroll
 html, body
 	padding: 0
 	margin: 0
